WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152754
regress/script-tests/deltablue-varargs.js.ftl-no-cjit-no-put-stack-validate on FTL B3 gets a B3 validation failure
https://bugs.webkit.org/show_bug.cgi?id=152754
Summary
regress/script-tests/deltablue-varargs.js.ftl-no-cjit-no-put-stack-validate o...
Filip Pizlo
Reported
2016-01-05 12:56:43 PST
Things.
Attachments
the patch
(6.48 KB, patch)
2016-01-05 13:20 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-01-05 13:20:33 PST
Created
attachment 268317
[details]
the patch
Geoffrey Garen
Comment 2
2016-01-05 13:24:10 PST
Comment on
attachment 268317
[details]
the patch r=me
Saam Barati
Comment 3
2016-01-05 13:24:43 PST
Comment on
attachment 268317
[details]
the patch LGTM
Filip Pizlo
Comment 4
2016-01-05 14:42:40 PST
Landed in
http://trac.webkit.org/changeset/194608
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug